LF_ISA_CONFIG flag not handling wrong configuration
  Passing incorrect value to LF_ISA_CONFIG cmake flag, was causing wrong value to be set to LF_ISA_CONFIG. Updated cmake to throw error instead.

AMD Internal : [CPUPL-4207]

Change-Id: Id1d27951e796f0600d4f5442ef168a10629d232c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,12 +43,16 @@ if(WIN32)
 else()
 	set (PYTHON_EXE "python3")
 endif()
+### Making LF_ISA_CONFIG case insensitive ###
+string(TOLOWER "${LF_ISA_CONFIG}" lf_isa_config_lower)
 
-if ("${LF_ISA_CONFIG}" STREQUAL "")
-  message(FATAL_ERROR "Machine ISA configuration default set to 'none', valid values are AVX, AVX2, AVX512 and auto")
+if ("${lf_isa_config_lower}" STREQUAL "none" OR "${lf_isa_config_lower}" STREQUAL "avx" OR "${lf_isa_config_lower}" STREQUAL "avx2" OR "${lf_isa_config_lower}" STREQUAL "avx512" OR "${lf_isa_config_lower}" STREQUAL "auto")
+   message("Machine ISA configuration set to ${LF_ISA_CONFIG}")
+else()
+   message(FATAL_ERROR "Machine ISA configuration error, valid values are AVX, AVX2, AVX512 and auto")
 endif()
 
-if (${LF_ISA_CONFIG} STREQUAL "auto")
+if (${lf_isa_config_lower} STREQUAL "auto")
     set(AUTO_CONFIG_PY "${CMAKE_SOURCE_DIR}/build/auto_config.py")
     # Run python script to find the architecture family name
     execute_process(
@@ -58,11 +62,11 @@ if (${LF_ISA_CONFIG} STREQUAL "auto")
           OUTPUT_STRIP_TRAILING_WHITESPACE)
     message( STATUS "Auto configuring the family :" ${CMD_OUTPUT})
     if(${CMD_OUTPUT} STREQUAL "zen" OR ${CMD_OUTPUT} STREQUAL "zen2" OR ${CMD_OUTPUT} STREQUAL "zen3")
-      set(LF_ISA_CONFIG "AVX2") 
+      set(lf_isa_config_lower "avx2") 
     elseif(${CMD_OUTPUT} STREQUAL "zen4")
-      set(LF_ISA_CONFIG "AVX512")
+      set(lf_isa_config_lower "avx512")
     else()
-      set(LF_ISA_CONFIG "none")
+      set(lf_isa_config_lower "none")
     endif()
 endif ()
 message("LF_ISA_CONFIG selected:${LF_ISA_CONFIG}")
@@ -158,18 +162,18 @@ endif()
 
 message(STATUS "checking SIMD  ")
 if(WIN32)
-	if(${LF_ISA_CONFIG} MATCHES "AVX512")
+	if(${lf_isa_config_lower} STREQUAL "avx512")
 	add_definitions(/arch:AVX512)
-	elseif(${LF_ISA_CONFIG} MATCHES "AVX2" OR ${LF_ISA_CONFIG} MATCHES "AVX")
+	elseif(${lf_isa_config_lower} STREQUAL "avx2" OR ${lf_isa_config_lower} STREQUAL "avx")
 	add_definitions(/arch:AVX2)
 	else()
 	message(STATUS "No ISA flag set")
 	endif()
 elseif(UNIX)
 	set(COMPILER_OPTIMIZATION_FLAGS	"-mtune=native -O3")
-	if(${LF_ISA_CONFIG} MATCHES "AVX512")
+	if(${lf_isa_config_lower} STREQUAL "avx512")
 		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -mavx512f -mfma")
-	elseif(${LF_ISA_CONFIG} MATCHES "AVX2" OR ${LF_ISA_CONFIG} MATCHES "AVX")
+	elseif(${lf_isa_config_lower} STREQUAL "avx2" OR ${lf_isa_config_lower} STREQUAL "avx")
 		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -mavx2 -mfma")
 	else()
 		message(STATUS "No ISA flag set")
