Netlib tests output differences with Make and CMake build systems
Updated CMake build configuration to use C11 standard instead of gnu99 similar to autotools configure/make build method. With this change,
the failing Netlib tests are working fine. In addition, included D_GNU_SOURCE flag as that was needed by some of the POSIX standard pthread functions used by blis.h referenced in main test suite.

AMD Internal : [CPUPL-4214]

Change-Id: I7f6190ab053994ca8576d7d269fe7d3fdf20a3e0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,7 +194,7 @@ endif()
 if(UNIX)
 	SET(COMPILER_DEBUG_FLAG "-g0")
 	set(GCC_WARNING_FLAGS "-Wall -Wno-comment")
-	set(COMPILER_LANGUAGE_FLAGS "-std=gnu99 -Wno-unused-function -Wno-parentheses -Wfatal-errors ")
+	set(COMPILER_LANGUAGE_FLAGS " -std=c11 -D_GNU_SOURCE -Wno-unused-function -Wno-parentheses -Wfatal-errors ")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_DEBUG_FLAG} ${GCC_WARNING_FLAGS} ${COMPILER_LANGUAGE_FLAGS}")
 	add_compile_options(-fPIC)
 endif()
