--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -25,7 +25,7 @@ if(WIN32)
     set(TEST_FLAGS "${OpenMP_libomp_LIBRARY}")
 elseif(UNIX)
     set(OpenMP_libomp_LIBRARY "-fopenmp" CACHE STRING "openmp library path")
-    set(Test_C_Flags " -O2 -Wall -Wno-comment" CACHE STRING "C Flags")
+    set(Test_C_Flags " -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-comment" CACHE STRING "C Flags")
     set(Test_LD_Flags "-lm -lpthread" CACHE STRING "LD FLags")
     set(TEST_FLAGS "${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
 message(STATUS "${TEST_FLAGS}")
