--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -80,6 +80,9 @@ add_executable("${PROJECT_NAME}" "")
 message("${CMAKE_BUILD_TYPE}")
 
 if(UNIX)
+    if(EXT_OPENMP_PATH)
+      target_link_libraries("${PROJECT_NAME}" PRIVATE "${LIBIOMP}" "${CMAKE_PROJECT_NAME}" blas)
+    endif()
     target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" blas)
     if(NOT ENABLE_EMBED_AOCLUTILS)
       target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" aoclutils)
