AOCL-LAPACK Test Suite: Addition of test case for SYTRF
Added test cases for SYTRF

Signed-off-by: Venkatesha Ch<vprasada@amd.com>
AMD-Internal: CPUPL-4309
Change-Id: Ic137b5a1455c41417f05b1c80cc8b6137b4b099a

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -40,5 +40,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_gtsv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_syevx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gelsd.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_sytrf.c
 )
 
