--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -16,6 +16,7 @@ set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin") 
 if(WIN32)
     set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-function")
 elseif(UNIX)
     set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
@@ -25,7 +26,7 @@ if(WIN32)
     set(TEST_FLAGS "${OpenMP_libomp_LIBRARY}")
 elseif(UNIX)
     set(OpenMP_libomp_LIBRARY "-fopenmp" CACHE STRING "openmp library path")
-    set(Test_C_Flags " -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-comment" CACHE STRING "C Flags")
+    set(Test_C_Flags " -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-comment -Wno-unused-function" CACHE STRING "C Flags")
     set(Test_LD_Flags "-lm -lpthread" CACHE STRING "LD FLags")
     set(TEST_FLAGS "${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
 message(STATUS "${TEST_FLAGS}")
