Added check for quick return test for ggevx, gesv, geqrf and gerqf apis when m=0 or n=0 or both m,n=0
AMD-Internal: [CPUPL-4318]
Signed-off-by: ksaithar <katteboina.saitharun@amd.com>
Change-Id: I3392ef4a6304cc658418efb97cc5f47c27c1aa2d

--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -111,4 +111,4 @@ add_subdirectory(src)
 add_subdirectory(validate_src)
 
 include(main_ctest.cmake)
-include(negative_test.cmake)
+include(conformance_test.cmake)
