AOCL-LAPACK Test Suite:  Addition of test case for GELS & LARFG
Added test code and validation for GELS and LARFG APIs

Signed-off-by: Venkatesha CH <vprasada@amd.com>
Change-Id: Ia827433263952ba73a8ca1a2d7cbace4c4294d92

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -33,5 +33,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_hgeqz.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gghrd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_rot.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_lartg.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_gels.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_larfg.c
 )
 
