--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -41,4 +41,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_syevx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
+${CMAKE_CURRENT_SOURCE_DIR}/test_gels.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_larfg.c
 )
