AOCL-LAPACK test suite: Added new test cases for GBTRF, GBTRS.
Change-Id: I10299fe5dc0f6a8b8e2f10869e693a4f362b792c

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -4,6 +4,8 @@
 
 target_sources(${PROJECT_NAME}
      PRIVATE
+${CMAKE_CURRENT_SOURCE_DIR}/test_gbtrf.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_gbtrs.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sytrd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_steqr.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_stevd.c
