AOCL-LAPACK Test Suite:  Addition of test case for GTSV API
Added test code and validation for GTSV API

AMD INTERNAL: CPUPL-4682
Signed-off-by: vinagend <Vidhya.Nagendran@amd.com>
Change-Id: I905ebfb6d9e695e07d467ef43b7e72fdad78567e

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -38,6 +38,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_rot.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lartg.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_org2r.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_syevx.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_gtsv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
