AOCL LAPACK Testsuite: Added GELSS test case
Added new test API to verify LAPACK GELSS API functionality
Disabled row space checking test for gelss, gels, gelsd

Signed-off-by: vprasada <vprasada@amd.com>
Change-Id: I5d0ffd416dcb6d2e0412f57094c4ee383a6a8908

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (C) 2022, Advanced Micro Devices, Inc. All rights reserved.
+# Copyright (C) 2022-2024, Advanced Micro Devices, Inc. All rights reserved.
 ###############################################################################
 
 target_sources(${PROJECT_NAME}
@@ -48,4 +48,5 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_gelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
+${CMAKE_CURRENT_SOURCE_DIR}/test_gelss.c
 )
