AOCL-LAPACK Test suite: Addition of test case  for GESVDX API
Added test code and validation for GESVDX API.

Changed threshold to 10.00 for threshold values previously less than 10.00 in SVD.dat config file.

Added clang format file : .clang-format

AMD INTERNAL: CPUPL-4169

Signed-off-by: vinagend <Vidhya.Nagendran@amd.com>

Change-Id: I429545a2c0a763a7d60d57060558253905b1735e

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -37,5 +37,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_gels.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_larfg.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gtsv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_syevx.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
 )
 
