--- a/src/lapack/dec/svd/ext/flamec/CMakeLists.txt
+++ b/src/lapack/dec/svd/ext/flamec/CMakeLists.txt
@@ -1,9 +1,10 @@
-##Copyright (C) 2020, Advanced Micro Devices, Inc.## 
+##Copyright (C) 2020-2024, Advanced Micro Devices, Inc.## 
 target_sources("${PROJECT_NAME}" 
      PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svd_ext.h
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svd_ext_u_unb_var1.c
 ${CMAKE_CURRENT_SOURCE_DIR}/lapack_dbdsqr.c
+${CMAKE_CURRENT_SOURCE_DIR}/lapack_dbdsqr_small.c
 ${CMAKE_CURRENT_SOURCE_DIR}/lapack_dgebrd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/lapack_dgebd2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/lapack_dgelqf.c
