--- a/src/lapack/x86/avx2/CMakeLists.txt
+++ b/src/lapack/x86/avx2/CMakeLists.txt
@@ -1,7 +1,8 @@
-##Copyright (C) 2023-24, Advanced Micro Devices, Inc. All rights reserved.## 
+##Copyright (C) 2023-2024, Advanced Micro Devices, Inc. All rights reserved.## 
 add_library(FLA_LAPACK_AVX2
      OBJECT
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lapack_avx2_kernels.h
+${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_small_avx2.h
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgeqrf_small_avx2.h
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgeqrf_small_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgetrf_small_avx2.c
@@ -15,6 +16,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/fla_zrot_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_zscal_ix1_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lu_piv_small_d_update_tr_matrix_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_nn_small10_avx2.c
+${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_xs_small10T_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_small6_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_small6T_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dgesvd_nn_small1T_avx2.c
