--- a/src/lapack/x86/front/CMakeLists.txt
+++ b/src/lapack/x86/front/CMakeLists.txt
@@ -1,8 +1,6 @@
-##Copyright (C) 2022, Advanced Micro Devices, Inc.## 
-target_sources("${PROJECT_NAME}" 
+##Copyright (C) 2022-2024, Advanced Micro Devices, Inc.## 
+target_sources("${PROJECT_NAME}"
      PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lapack_x86_common.h
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lapack_x86_common.c
-
-
-	)
+)
