--- a/test/aoclflaprogress/CMakeLists.txt
+++ b/test/aoclflaprogress/CMakeLists.txt
@@ -9,8 +9,15 @@ elseif(UNIX)
     set_target_properties(test_libFLAME_aocl PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
 
-target_link_libraries(test_libFLAME_aocl debug  "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" blas)
-target_link_libraries(test_libFLAME_aocl optimized "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+if(UNIX)
+	foreach(BLAS_LIB ${BLAS_LINK_LIST})
+      		target_link_libraries(test_libFLAME_aocl debug "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" ${BLAS_LIB})
+      		target_link_libraries(test_libFLAME_aocl optimized "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" ${BLAS_LIB})
+	endforeach()
+else(UNIX)
+	target_link_libraries(test_libFLAME_aocl debug  "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+	target_link_libraries(test_libFLAME_aocl optimized "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+endif()
 
 if(NOT ENABLE_EMBED_AOCLUTILS)
   target_link_libraries(test_libFLAME_aocl debug  "${LDFLAGS}" "${CMAKE_PROJECT_NAME}" aoclutils)
