--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -28,8 +28,12 @@ elseif(UNIX)
     set(OpenMP_libomp_LIBRARY "-fopenmp" CACHE STRING "openmp library path")
     set(Test_C_Flags " -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-comment -Wno-unused-function" CACHE STRING "C Flags")
     set(Test_LD_Flags "-lm -lpthread" CACHE STRING "LD FLags")
-    set(TEST_FLAGS "${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
-message(STATUS "${TEST_FLAGS}")
+    if(EXT_OPENMP_PATH)
+    	set(TEST_FLAGS "${LIBIOMP} ${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
+    else(EXT_OPENMP_PATH)
+    	set(TEST_FLAGS "${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
+    endif()
+    message(STATUS "${TEST_FLAGS}")
 else()
 message(STATUS "Openmp: OS NOT found")
 endif()
@@ -81,10 +85,9 @@ add_executable("${PROJECT_NAME}" "")
 message("${CMAKE_BUILD_TYPE}")
 
 if(UNIX)
-    if(EXT_OPENMP_PATH)
-      target_link_libraries("${PROJECT_NAME}" PRIVATE "${LIBIOMP}" "${CMAKE_PROJECT_NAME}" blas)
-    endif()
-    target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+    foreach(BLAS_LIB ${BLAS_LINK_LIST})
+      target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" ${BLAS_LIB})
+    endforeach()
     if(NOT ENABLE_EMBED_AOCLUTILS)
       target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" aoclutils)
       target_link_libraries("${PROJECT_NAME}" PRIVATE "${TEST_FLAGS}" "${CMAKE_PROJECT_NAME}" "libstdc++.so")
