--- a/test/legacyflame/CMakeLists.txt
+++ b/test/legacyflame/CMakeLists.txt
@@ -7,8 +7,15 @@ if(UNIX)
     set(Legacy_Flame_FLAGS "-lm -lpthread")
 endif()
 add_definitions(-DBLIS1_FROM_LIBFLAME)
-target_link_libraries(test_libFLAME debug "${CMAKE_PROJECT_NAME}" "${Legacy_Flame_FLAGS}" blas)
-target_link_libraries(test_libFLAME optimized "${Legacy_Flame_FLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+if(UNIX)
+    	foreach(BLAS_LIB ${BLAS_LINK_LIST})
+		target_link_libraries(test_libFLAME debug "${CMAKE_PROJECT_NAME}" "${Legacy_Flame_FLAGS}" ${BLAS_LIB})
+		target_link_libraries(test_libFLAME optimized "${Legacy_Flame_FLAGS}" "${CMAKE_PROJECT_NAME}" ${BLAS_LIB})
+    	endforeach()
+else(UNIX)
+	target_link_libraries(test_libFLAME debug "${CMAKE_PROJECT_NAME}" "${Legacy_Flame_FLAGS}" blas)
+	target_link_libraries(test_libFLAME optimized "${Legacy_Flame_FLAGS}" "${CMAKE_PROJECT_NAME}" blas)
+endif()
 
 if(NOT ENABLE_EMBED_AOCLUTILS)
   target_link_libraries(test_libFLAME optimized "${Legacy_Flame_FLAGS}" "${CMAKE_PROJECT_NAME}" aoclutils)
