AOCL-LAPACK Main Test: Change in GELS Validation
Usage of BLIS internal APIs removed to maintain
compatibility of test-suite for any BLAS library.

Signed-off-by: Vasanthakumar R <varajago@amd.com>
Change-Id: Iedea67790f43bbfb48dde1770e43d80936eab5b1

--- a/test/main/Makefile
+++ b/test/main/Makefile
@@ -16,9 +16,9 @@ LDFLAGS        := -lstdc++ -lm -lpthread $(OMP_LIB)
 #
 # --- LIBFLAME \ LAPACK library ------------------------------------------------
 #
-LIB_PATH          := ../../lib/x86_64-unknown-linux-gnu/
+LIB_PATH          := ../../lib
 LIBFLAME          := $(LIB_PATH)/libflame.a
-LAPACK_INC_PATH   := ../../include/x86_64-unknown-linux-gnu/
+LAPACK_INC_PATH   := ../../include
 
 #
 # --- BLAS library -------------------------------------------------------------
