Update Zen5 core architecture detection with LF_ISA_CONFIG=auto
1. Update core architecture detection on Zen5 when using LF_ISA_CONFIG=auto build flag.
2. Realigned auto_config.py with few Python standards.

AMD-Internal: CPUPL-4433
Signed-off-by: tprnaidu <TPratap.Naidu@amd.com>

Change-Id: I86fda26404f7f35aab2a7696695f91a1e0753379

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ if (${lf_isa_config_lower} STREQUAL "auto")
     message( STATUS "Auto configuring the family :" ${CMD_OUTPUT})
     if(${CMD_OUTPUT} STREQUAL "zen" OR ${CMD_OUTPUT} STREQUAL "zen2" OR ${CMD_OUTPUT} STREQUAL "zen3")
       set(lf_isa_config_lower "avx2") 
-    elseif(${CMD_OUTPUT} STREQUAL "zen4")
+    elseif(${CMD_OUTPUT} STREQUAL "zen4" OR ${CMD_OUTPUT} STREQUAL "zen5")
       set(lf_isa_config_lower "avx512")
     else()
       set(lf_isa_config_lower "none")
