Perf improvement for DLARFG
 1. Removed extra context initilization.
 2. Improved perf by eight loops at a time through avx2 and AVX512 intrnsics.
 3. Changed AVX2 and AVX512 objects lib names to FLA_LAPACK_AVX2 and FLA_LAPACK_AVX512

AMD Internal : [CPUPL-4598]

Change-Id: I5908fcaeadb3aaa61521a72c2c9163a6d56c71cb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -894,8 +894,8 @@ if(WIN32)
 endif()
 
 set(OBJECT_LIBRARIES 
-    $<TARGET_OBJECTS:AVX512_LU>
-    $<TARGET_OBJECTS:AVX2_LU>
+    $<TARGET_OBJECTS:FLA_LAPACK_AVX512>
+    $<TARGET_OBJECTS:FLA_LAPACK_AVX2>
 )
 
 if (BUILD_SHARED_LIBS)
