AOCL LAPACK Testsuite: Added GELSD test case
Added new test API to verify LAPACK GELSD API functionality

AMD-Internal: CPUPL-4453
Signed-off-by: dnikku <Deepika.Nikku@amd.com>
Change-Id: Ie83b567a93079905bafc1a730ef1190da1b27768

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -42,9 +42,10 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_org2r.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_syevx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gtsv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gesvdx.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_gels.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_larfg.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_gelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
-${CMAKE_CURRENT_SOURCE_DIR}/test_gels.c
-${CMAKE_CURRENT_SOURCE_DIR}/test_larfg.c
 )
