--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -39,5 +39,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_larfg.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gtsv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_syevx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_gelsd.c
 )
 
