DGETRI optimizations for small input sizes.
    1. Lapack code added for DTRTRI and DTRTI2 api's.
	2. In lined gemv , dscal, dswap and dtrmv blas api’s for small input sizes.

AMD Internal : [CPUPL-4604]

Change-Id: I34f0d87dc55b21d2c7384ab7133a89026ded560f

--- a/src/lapack/x86/generic/CMakeLists.txt
+++ b/src/lapack/x86/generic/CMakeLists.txt
@@ -1,5 +1,5 @@
-##Copyright (C) 2024, Advanced Micro Devices, Inc. All rights reserved.## 
-target_sources("${PROJECT_NAME}" 
-     PRIVATE
-${CMAKE_CURRENT_SOURCE_DIR}/fla_lapack_lu_small_kernals_d.h
+##Copyright(C) 2024, Advanced Micro Devices, Inc.All rights reserved.##
+	target_sources("${PROJECT_NAME}" PRIVATE 
+	${CMAKE_CURRENT_SOURCE_DIR}/ fla_lapack_lu_small_kernals_d.h
+	${CMAKE_CURRENT_SOURCE_DIR}/ fla_lapack_lu_getri_small_d.c
 	)
