--- a/src/lapack/inv/tri/lu/flamec/CMakeLists.txt
+++ b/src/lapack/inv/tri/lu/flamec/CMakeLists.txt
@@ -1,4 +1,4 @@
-##Copyright (C) 2020, Advanced Micro Devices, Inc.## 
+##Copyright (C) 2020-24, Advanced Micro Devices, Inc.## 
 target_sources("${PROJECT_NAME}" 
      PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_lu.h
@@ -14,4 +14,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_lu_unb_var1.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_lu_unb_var2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_lu_unb_var3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_lu_unb_var4.c
+${CMAKE_CURRENT_SOURCE_DIR}/lapack_dtrtri.c
+${CMAKE_CURRENT_SOURCE_DIR}/lapack_dtrti2.c
 	)
