--- a/src/lapack/x86/CMakeLists.txt
+++ b/src/lapack/x86/CMakeLists.txt
@@ -1,5 +1,6 @@
-##Copyright (C) 2023, Advanced Micro Devices, Inc.## 
+##Copyright (C) 2023-24, Advanced Micro Devices, Inc.## 
 add_subdirectory(front)
+add_subdirectory(generic)
 remove_definitions(/arch:AVX)
 add_subdirectory(avx2)
 remove_definitions(/arch:AVX2)
