AOCL LAPACK Testsuite: Accuracy tests for syev
1) Testing SYEV API by generating specific input matrix
2) Made a common valdiate function for all the symmetric eigen APIs
   Validates EVs generated and norm for Eigen value decomposition

AMD-Internal: CPUPL-4807
Signed-off-by: dnikku <Deepika.Nikku@amd.com>
Change-Id: I18e3222466c42d8183fb94dee8c6e1f627027052
Signed-off-by: dnikku <Deepika.Nikku@amd.com>

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -38,7 +38,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_lartg.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gels.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_larfg.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gtsv.c
-${CMAKE_CURRENT_SOURCE_DIR}/validate_syevx.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_syev.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_sytrf.c
