AOCL-LAPACK Test Suite: Add LARF API
Add test run and validation for the LARF API

Signed-off-by: Vibhav Gupta <Vibhav.Gupta@amd.com>
AMD-Internal: CPUPL-5047
Change-Id: I92377fdc35f039e3e9a89fa16e4faa2229e85485

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -49,4 +49,5 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lapack.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gelss.c
-${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf.c)
+${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_larf.c)
