--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -42,5 +42,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_syevx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_sytrf.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_larf.c
 )
 
