AOCL-LAPACK: AVX512 Optimization for rotation routines
Added AVX512 optimizations for APIs/routines DROT, ZROT, dhrot3.
Corresponding AVX2 codes were used to develop AVX512 codes.

Signed-off-by: Vasanthakumar R <varajago@amd.com>
AMD-Internal: CPUPL-5192
Change-Id: I1d5c8b31b1ca334603a92b4d5da9ae68b4be8aad

--- a/src/lapack/x86/avx512/CMakeLists.txt
+++ b/src/lapack/x86/avx512/CMakeLists.txt
@@ -7,6 +7,9 @@ add_library(FLA_LAPACK_AVX512
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_zgetrf_small_avx512.c
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_dscal_ix1_avx512.c
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_dlange_kernels_avx512.c
+     ${CMAKE_CURRENT_SOURCE_DIR}/fla_drot_avx512.c
+     ${CMAKE_CURRENT_SOURCE_DIR}/fla_zrot_avx512.c
+     ${CMAKE_CURRENT_SOURCE_DIR}/fla_dhrot3_avx512.c
 )
 
 if(WIN32)
