--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if (${lf_isa_config_lower} STREQUAL "auto")
           OUTPUT_STRIP_TRAILING_WHITESPACE)
     message( STATUS "Auto configuring the family :" ${CMD_OUTPUT})
     if(${CMD_OUTPUT} STREQUAL "zen" OR ${CMD_OUTPUT} STREQUAL "zen2" OR ${CMD_OUTPUT} STREQUAL "zen3")
-      set(lf_isa_config_lower "avx2") 
+      set(lf_isa_config_lower "avx2")
     elseif(${CMD_OUTPUT} STREQUAL "zen4" OR ${CMD_OUTPUT} STREQUAL "zen5")
       set(lf_isa_config_lower "avx512")
     else()
@@ -120,6 +120,7 @@ option (ENABLE_SUPER_MATRIX "Enable super matrix" OFF)
 option (ENABLE_CBLAS_INTERFACES "Enable cblas interfaces" OFF)
 option (ENABLE_GOTO_INTERFACES "Enable goto interfaces" OFF)
 option (ENABLE_DEFAULT_BLKSZ "Enable default blocksize" OFF)
+option (BUILD_DOC "Build documentation for AOCL-LAPACK (Disabled by default)" OFF)
 if (ENABLE_DEFAULT_BLKSZ)
     set (FLA_DEFAULT_M_BLKSZ 128)
     set (FLA_DEFAULT_N_BLKSZ 128)
@@ -176,7 +177,7 @@ elseif(UNIX)
 else()
 	message(STATUS "OS UNKNOWN CANNOT SET SIMD")
 endif()
-	
+
 
 if(ENABLE_GCOV)
 	set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
@@ -881,7 +882,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src/lapack/x86/avx512)
 include_directories(${CMAKE_SOURCE_DIR}/src/lapack/fblas/front)
 include_directories(${CMAKE_SOURCE_DIR}/src/lapack/fblas/src)
 if(ENABLE_AOCL_BLAS)
-	include_directories(${BLAS_INCLUDE_DIR}) 
+	include_directories(${BLAS_INCLUDE_DIR})
 endif()
 
 file(GLOB headers ${CMAKE_SOURCE_DIR}/*.h)
@@ -895,7 +896,7 @@ if(WIN32)
 	endif()
 endif()
 
-set(OBJECT_LIBRARIES 
+set(OBJECT_LIBRARIES
     $<TARGET_OBJECTS:FLA_LAPACK_AVX512>
     $<TARGET_OBJECTS:FLA_LAPACK_AVX2>
 )
@@ -980,7 +981,7 @@ if(NOT BUILD_SHARED_LIBS)
 		set(LIBFLAME_STATICLIB_NAME lib${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX})
 		set(LIBFLAME_STATICLIB_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${LIBFLAME_STATICLIB_NAME})
 		message(STATUS "libflame static library path ${LIBFLAME_STATICLIB_PATH}")
-	else ()	
+	else ()
 		set(LIBFLAME_STATICLIB_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/$<CONFIG>/${TEMP_VAR}${CMAKE_STATIC_LIBRARY_SUFFIX})
 		message(STATUS "libflame static library path ${LIBFLAME_STATICLIB_PATH}")
 	endif ()
@@ -998,16 +999,16 @@ endif ()
 	target_include_directories(${PROJECT_NAME} PUBLIC src/lapack/x86/front)
 	target_include_directories(${PROJECT_NAME} PUBLIC src/lapack/x86/generic)
 
-#If embedding AOCL-UTILS library in AOCL-LAPACK option is selected  
+#If embedding AOCL-UTILS library in AOCL-LAPACK option is selected
 if(ENABLE_EMBED_AOCLUTILS)
   #AOCLUtils library path handling
-  #If user has provided the library path, use it. 
+  #If user has provided the library path, use it.
   if(LIBAOCLUTILS_LIBRARY_PATH AND LIBAOCLUTILS_INCLUDE_PATH)
 
 	message(STATUS "User provided AOCLUtils library path : " ${LIBAOCLUTILS_LIBRARY_PATH})
 	message(STATUS "User provided AOCLUtils library headers path : " ${LIBAOCLUTILS_INCLUDE_PATH})
-	
-	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})	
+
+	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})
 
   else(LIBAOCLUTILS_LIBRARY_PATH AND LIBAOCLUTILS_INCLUDE_PATH)
 	#Else build from source if EMBED_AOCLUTILS is selected
@@ -1041,10 +1042,10 @@ if(ENABLE_EMBED_AOCLUTILS)
 
 		ExternalProject_Get_Property(${LIBAOCLUTILS_PROJECT} source_dir)
 		ExternalProject_Get_Property(${LIBAOCLUTILS_PROJECT} binary_dir)
-	
+
 		set(LIBAOCLUTILS_SOURCE_DIR ${source_dir})
 		set(LIBAOCLUTILS_INSTALL_DIR ${binary_dir}/${LIBAOCLUTILS_INSTALL_DIR_NAME})
-	
+
 		message(STATUS "libaoclutils source directory ${LIBAOCLUTILS_SOURCE_DIR}")
 		message(STATUS "libaoclutils install directory ${LIBAOCLUTILS_INSTALL_DIR}")
 
@@ -1052,11 +1053,11 @@ if(ENABLE_EMBED_AOCLUTILS)
 	endif()
 
 	set(LIBAOCLUTILS_LIBRARY_PATH ${LIBAOCLUTILS_INSTALL_DIR}/lib/${LIBAOCLUTILS_STATICLIB})
-	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_SOURCE_DIR}/include)	
+	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_SOURCE_DIR}/include)
 
   endif()
 
-  #For libflame shared library, Link directly with libaoclutils library 
+  #For libflame shared library, Link directly with libaoclutils library
   #For libflame static library, merge libaoclutils and libflame binaries into a single static library
   if(BUILD_SHARED_LIBS)
 	target_link_libraries(${PROJECT_NAME} ${LIBAOCLUTILS_LIBRARY_PATH})
@@ -1087,9 +1088,9 @@ if(ENABLE_EMBED_AOCLUTILS)
 	target_link_libraries(${PROJECT_NAME} "libstdc++.so")
   endif ()
 
-elseif(BUILD_SHARED_LIBS) 
+elseif(BUILD_SHARED_LIBS)
 	if(LIBAOCLUTILS_LIBRARY_PATH AND LIBAOCLUTILS_INCLUDE_PATH)
-		target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})	
+		target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})
 		target_link_libraries(${PROJECT_NAME} ${LIBAOCLUTILS_LIBRARY_PATH})
 	else()
 		message(FATAL_ERROR "Shared Library build requires AOCL-Utils library and header path to be set! Please set the same using LIBAOCLUTILS_LIBRARY_PATH and LIBAOCLUTILS_INCLUDE_PATH options respectively")
@@ -1099,8 +1100,8 @@ elseif(BUILD_SHARED_LIBS)
 elseif(LIBAOCLUTILS_INCLUDE_PATH)
 
 	message(STATUS "User provided AOCLUtils library headers path : " ${LIBAOCLUTILS_INCLUDE_PATH})
-	
-	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})	
+
+	target_include_directories(${PROJECT_NAME} PUBLIC ${LIBAOCLUTILS_INCLUDE_PATH})
 
 else()
 	message(FATAL_ERROR "Header file path of aocl-utils library not set! Please set the same using LIBAOCLUTILS_INCLUDE_PATH option")
@@ -1111,7 +1112,7 @@ endif()
 if(WIN32)
 	if (NOT ENABLE_BUILTIN_BLAS)
 		target_link_libraries(${PROJECT_NAME} ${CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH}/${EXT_BLAS_LIBNAME})
-		target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH})		
+		target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH})
 	endif ()
 endif()
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
@@ -1137,7 +1138,7 @@ if (BUILD_TEST OR BUILD_LEGACY_TEST)
 		# CHECKS if blas library exists
 		set(BLAS_LIB_LIST ${EXT_BLAS_LIBNAME})
 
-		# If there are multiple libraries that are part of given BLAS, each will be separated by space 
+		# If there are multiple libraries that are part of given BLAS, each will be separated by space
 		separate_arguments(BLAS_LIB_LIST)
 		message(STATUS "BLAS library provided ${BLAS_LIB_LIST}")
 		foreach(BLAS_LIB ${BLAS_LIB_LIST})
@@ -1207,14 +1208,17 @@ if(BUILD_LAPACKE_TEST)
 	add_subdirectory(test/lapacke)
 endif()
 
-# To View Added Definitions and C Flags 
-get_directory_property( DirDefs COMPILE_DEFINITIONS ) 
+# To View Added Definitions and C Flags
+get_directory_property( DirDefs COMPILE_DEFINITIONS )
 message(STATUS "COMPILE_DEFINITIONS : ${DirDefs} " )
 message(STATUS "CMAKE_C_FLAGS : ${CMAKE_C_FLAGS}")
 # make clean for additional header files any further files can be added in the list
 set_property(
         TARGET ${PROJECT_NAME}
         APPEND
-        PROPERTY ADDITIONAL_CLEAN_FILES 
+        PROPERTY ADDITIONAL_CLEAN_FILES
 		${CMAKE_SOURCE_DIR}/build/FLA_config.h ${CMAKE_SOURCE_DIR}/include/
 )
+if (BUILD_DOC)
+    add_subdirectory(docs/libflame)
+endif()
