AVX512 implementation for dlarf's dgemv and dger call
- Implemented AVX512 code path for dlarf API on similar lines
of existing AVX2 implementation.
- Replaced calls to FLA_IS_ARCH_ID macro that checks if a
particular ISA is supported with FLA_IS_MIN_ARCH_ID.

AMD-Internal: CPUPL-5531
Change-Id: I6bbe1641c01fad2b013c987ec0d42b4a679f0bef

--- a/src/lapack/x86/avx512/CMakeLists.txt
+++ b/src/lapack/x86/avx512/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(FLA_LAPACK_AVX512
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_dhrot3_avx512.c
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_sscal_ix1_avx512.c
      ${CMAKE_CURRENT_SOURCE_DIR}/fla_zscal_ix1_avx512.c
+     ${CMAKE_CURRENT_SOURCE_DIR}/fla_dlarf_kernels_avx512.c
 )
 
 if(WIN32)
